<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:textColor="@android:color/white"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_bottom"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Powered by RAIN CITY GAMING"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ScrollView
            android:layout_alignParentTop="true"
            android:layout_above="@id/tv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:onClick="StartCheat"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:backgroundTint="@color/colorAccent"
                        android:drawableLeft="@drawable/ic_baseline_play_arrow_24"
                        android:text="@string/start_cheat"
                        android:layout_weight="1.0"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"/>
                    <Button
                        android:onClick="StopCheat"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:backgroundTint="#FF0000"
                        android:drawableLeft="@drawable/ic_baseline_stop_24"
                        android:text="@string/stop_cheat"
                        android:layout_weight="1.0"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@android:color/white"
                        android:text="@string/pubgm_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <RadioGroup
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radiobutton_global_version"
                            android:text="@string/global_version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/radiobutton_vietnam_version"
                            android:text="@string/vietnam_version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/radiobutton_korea_version"
                            android:text="@string/korea_version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>