<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:theme="@style/ServiceTheme"
    android:id="@+id/base_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_controll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="35dp"
            android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_menu"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/ic_close"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:tint="@android:color/white"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
        </RelativeLayout>
        <Switch
            android:id="@+id/switch_small_crosshair"
            android:padding="10dp"
            android:text="@string/small_crosshair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Switch
            android:id="@+id/switch_less_recoil"
            android:padding="10dp"
            android:text="@string/less_recoil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/character_view"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:progress="0"
                    android:max="10"
                    android:min="-10"
                    android:id="@+id/seekbar_character_view"
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textview_seekbar_character_view"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <Switch
            android:id="@+id/switch_aimbot_100m"
            android:padding="10dp"
            android:text="@string/aimbot_100m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>